libgalahad_src += files('bsc.F90')

libgalahad_c_src += files('C/bsc_ciface.F90')

libgalahad_python_src += [['bsc', files('Python/bsc_pyiface.c')]]

galahad_tests += [['bsc', 'bsct', files('bsct.F90')]]

galahad_python_tests += [['bsc', 'bsc_py', files('Python/test_bsc.py')]]

galahad_examples += [['bscs', files('bscs.f90')]]
