libgalahad_src += files('cdqp.F90')

galahad_binaries += [['runcdqp_qplib', files('runcdqp_qplib.F90')]]

libgalahad_cutest_src += files('usecdqp.F90')

galahad_cutest_binaries += [['runcdqp_sif', files('runcdqp_sif.F90')]]

galahad_tests += [['cdqp', 'cdqpt', files('cdqpt.F90')]]

galahad_examples += [['cdqps', files('cdqps.f90')]]
