libgalahad_src += files('convert.F90')

libgalahad_c_src += files('C/convert_ciface.F90')

libgalahad_python_src += [['convert', files('Python/convert_pyiface.c')]]

galahad_tests += [['convert', 'convertt', files('convertt.F90')]]

galahad_python_tests += [['convert', 'convert_py', files('Python/test_convert.py')]]

galahad_examples += [['converts', files('converts.f90')]]
