libgalahad_src += files('dlp.F90')

galahad_binaries += [['indlp', files('indlp.F90')]]

libgalahad_cutest_src += files('usedlp.F90')

galahad_cutest_binaries += [['rundlp_sif', files('rundlp_sif.F90')]]

galahad_tests += [['dlp', 'dlpt', files('dlpt.F90')]]

galahad_examples += [['dlps', files('dlps.f90')]]
